<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="20dp"
    android:padding="30dp"
    android:backgroundTint="@color/card_background"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp"
    app:cardMaxElevation="30dp"
    android:id="@+id/main_container"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"

        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            android:textColor="@color/black"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:backgroundTint="@color/card_background"
                android:maxEms="10"
                android:minEms="5"
                android:maxLines="1"
                android:maxLength="10"
                android:hint="@string/hint_user_name"
                android:fontFamily="@font/rammetto_one"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            android:textColor="@color/black"

            >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="true"
            android:fontFamily="@font/rammetto_one"
            android:backgroundTint="@color/card_background"
            android:hint="@string/prompt_email"
            android:maxEms="30"
            android:minEms="15"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/password_container"

            >
            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mypass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/prompt_password"
            android:maxEms="15"
            android:maxLength="15"
            android:minEms="8"
            android:maxLines="1"
                android:backgroundTint="@color/card_background"
                android:fontFamily="@font/rammetto_one"
            android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/confirm_password_container"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/hint_confirm_password"
                android:maxEms="15"
                android:maxLength="15"
                android:minEms="8"
                android:maxLines="1"
                android:backgroundTint="@color/card_background"
                android:fontFamily="@font/rammetto_one"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botton_shape"
            android:text="@string/sign_up"
            android:fontFamily="@font/rammetto_one"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/Login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/card_background"
            android:fontFamily="@font/rammetto_one"
            android:text="@string/text_already_member"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="12sp" />


    </LinearLayout>

</androidx.cardview.widget.CardView>