<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.login.LoginFragment">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColorHint="@color/white"
        app:errorTextColor="@color/design_default_color_error"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rammetto_one"
            android:hint="@string/prompt_email"
            android:maxEms="30"
            android:backgroundTint="@color/colorPrimaryDark"
            android:minEms="15"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textEmailAddress"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="166dp"
        android:textColorHint="@color/white"
        app:errorTextColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_container"
        app:layout_constraintVertical_bias="0.212"
        android:autofillHints=""
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rammetto_one"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/prompt_password"
        android:maxEms="15"
        android:maxLength="15"
        android:minEms="8"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:enabled="false"
        android:src="@drawable/ic_login_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_container"
        app:layout_constraintVertical_bias="0.225"
        android:contentDescription="@string/action_sign_in" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="226dp"
        android:layout_height="183dp"
        android:layout_marginTop="84dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/user_name_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/action_sign_in" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="61dp"
        android:fontFamily="@font/rammetto_one"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="start"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>